Create session id handler
